# url-shortener

./: build.sh  db.sqlite3  pyproject.toml  railway.json  readme.md  render.yaml  requirements.txt
shortener/: forms.py  models.py  serializers.py  urls.py  views.py
shortener/migrations/: 0001_initial.py
templates/: base.html
templates/shortener/: api_docs.html  home.html
urlshortener/: settings.py  urls.py
