[tool.poetry]
name = "url-shortener"
version = "0.1.0"
description = "A URL shortener like Bit.ly"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.2.7"
gunicorn = "^21.2.0"
whitenoise = "^6.6.0"
dj-database-url = "^2.0.0"
psycopg2-binary = "^2.9.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"